WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303340
REGRESSION(
303682@main
): Broke TestWebKitAPI.SiteIsolation.* on Sonoma
https://bugs.webkit.org/show_bug.cgi?id=303340
Summary
REGRESSION(303682@main): Broke TestWebKitAPI.SiteIsolation.* on Sonoma
Jonathan Bedard
Reported
2025-12-01 13:34:16 PST
History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.SiteIsolation.NavigateIframeToProvisionalNavigationFailure&test=TestWebKitAPI.SiteIsolation.IframeRedirectSameSite&test=TestWebKitAPI.SiteIsolation.IframeRedirectCrossSite
Build:
https://build.webkit.org/#/builders/949/builds/8978
Log: ASSERTION FAILED: !m_messageReceivers.contains(std::make_pair(messageReceiverName, destinationID)) /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebKit/Platform/IPC/MessageReceiverMap.cpp(53) : void IPC::MessageReceiverMap::addMessageReceiver(ReceiverName, uint64_t, MessageReceiver &) 1 0x348db8704 IPC::MessageReceiverMap::addMessageReceiver(IPC::ReceiverName, unsigned long long, IPC::MessageReceiver&) 2 0x34770f7f0 WebKit::AuxiliaryProcessProxy::addMessageReceiver(IPC::ReceiverName, unsigned long long, IPC::MessageReceiver&) 3 0x346a8a528 void WebKit::AuxiliaryProcessProxy::addMessageReceiver<unsigned long long>(IPC::ReceiverName, WTF::ObjectIdentifierGenericBase<unsigned long long> const&, IPC::MessageReceiver&) 4 0x34779ae30 WebKit::RemotePageDrawingAreaProxy::RemotePageDrawingAreaProxy(WebKit::DrawingAreaProxy&, WebKit::WebProcessProxy&) 5 0x34779ad1c WebKit::RemotePageDrawingAreaProxy::RemotePageDrawingAreaProxy(WebKit::DrawingAreaProxy&, WebKit::WebProcessProxy&) 6 0x34779ab94 WebKit::RemotePageDrawingAreaProxy::create(WebKit::DrawingAreaProxy&, WebKit::WebProcessProxy&) 7 0x34779c1bc WebKit::RemotePageProxy::injectPageIntoNewProcess() 8 0x347714894 WebKit::BrowsingContextGroup::addFrameProcessAndInjectPageContextIf(WebKit::FrameProcess&, WTF::Function<bool (WebKit::WebPageProxy&)>)::$_10::operator()(WebKit::WebPageProxy&, WebCore::Site const&) const 9 0x347714458 WebKit::BrowsingContextGroup::addFrameProcessAndInjectPageContextIf(WebKit::FrameProcess&, WTF::Function<bool (WebKit::WebPageProxy&)>) 10 0x347713ffc WebKit::BrowsingContextGroup::addFrameProcess(WebKit::FrameProcess&) 11 0x34775ebbc WebKit::FrameProcess::FrameProcess(WebKit::WebProcessProxy&, WebKit::BrowsingContextGroup&, std::__1::optional<WebCore::Site> const&, WebCore::Site const&, WebKit::WebPreferences const&, WebKit::InjectBrowsingContextIntoProcess) 12 0x34775edc4 WebKit::FrameProcess::FrameProcess(WebKit::WebProcessProxy&, WebKit::BrowsingContextGroup&, std::__1::optional<WebCore::Site> const&, WebCore::Site const&, WebKit::WebPreferences const&, WebKit::InjectBrowsingContextIntoProcess) 13 0x347713cc4 WebKit::FrameProcess::create(WebKit::WebProcessProxy&, WebKit::BrowsingContextGroup&, std::__1::optional<WebCore::Site> const&, WebCore::Site const&, WebKit::WebPreferences const&, WebKit::InjectBrowsingContextIntoProcess) 14 0x3477136a8 WebKit::BrowsingContextGroup::ensureProcessForSite(WebCore::Site const&, WebCore::Site const&, WebKit::WebProcessProxy&, WebKit::WebPreferences const&, WebKit::InjectBrowsingContextIntoProcess) 15 0x3478292e4 WebKit::WebFrameProxy::prepareForProvisionalLoadInProcess(WebKit::WebProcessProxy&, API::Navigation&, WebKit::BrowsingContextGroup&, std::__1::optional<WebCore::SecurityOriginData>, WTF::CompletionHandler<void (WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>)>&&) 16 0x347893014 WebKit::WebPageProxy::continueNavigationInNewProcess(API::Navigation&, WebKit::WebFrameProxy&, WTF::RefPtr<WebKit::SuspendedPageProxy, WTF::RawPtrTraits<WebKit::SuspendedPageProxy>, WTF::DefaultRefDerefTraits<WebKit::SuspendedPageProxy>>&&, WebKit::BrowsingContextGroup&, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::ProcessSwapRequestedByClient, WebCore::ShouldTreatAsContinuingLoad, std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::NetworkResourceLoadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::LoadedWebArchive, WebCore::IsPerformingHTTPFallback, WebCore::ProcessSwapDisposition, WebKit::WebsiteDataStore*) 17 0x347970cf4 WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_49::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 18 0x347972a38 WTF::Detail::CallableWrapper<WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_49, void, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral>::call(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 19 0x347af9aa8 WTF::Function<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) const 20 0x347a7f404 WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 21 0x347af9f4c WebKit::WebProcessPool::processForNavigation(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, API::Navigation const&, WTF::URL const&, WebKit::BrowsingContextGroup&, WebKit::WebProcessPool::IsSharedProcess, WebCore::Site const&, WebKit::ProcessSwapRequestedByClient, WebKit::WebProcessProxy::LockdownMode, WebKit::WebProcessProxy::EnhancedSecurity, WebKit::LoadedWebArchive, WebKit::FrameInfoData const&, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&)::$_54::operator()() 22 0x347af9e50 WTF::Detail::CallableWrapper<WebKit::WebProcessPool::processForNavigation(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, API::Navigation const&, WTF::URL const&, WebKit::BrowsingContextGroup&, WebKit::WebProcessPool::IsSharedProcess, WebCore::Site const&, WebKit::ProcessSwapRequestedByClient, WebKit::WebProcessProxy::LockdownMode, WebKit::WebProcessProxy::EnhancedSecurity, WebKit::LoadedWebArchive, WebKit::FrameInfoData const&, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&)::$_54, void>::call() 23 0x34446c0e0 WTF::Function<void ()>::operator()() const 24 0x3444e9660 WTF::CompletionHandler<void ()>::operator()() 25 0x347d77bb8 WebKit::NetworkProcessProxy::addAllowedFirstPartyForCookies(WebKit::WebProcessProxy&, WebCore::RegistrableDomain const&, WebKit::LoadedWebArchive, WTF::CompletionHandler<void ()>&&) 26 0x347a7ed0c WebKit::WebProcessPool::processForNavigation(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, API::Navigation const&, WTF::URL const&, WebKit::BrowsingContextGroup&, WebKit::WebProcessPool::IsSharedProcess, WebCore::Site const&, WebKit::ProcessSwapRequestedByClient, WebKit::WebProcessProxy::LockdownMode, WebKit::WebProcessProxy::EnhancedSecurity, WebKit::LoadedWebArchive, WebKit::FrameInfoData const&, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&) 27 0x347970204 WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_50::operator()(WebKit::FrameProcess*) 28 0x34796fce4 WTF::Detail::CallableWrapper<WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_50, void, WebKit::FrameProcess*>::call(WebKit::FrameProcess*) 29 0x34773a90c WTF::Function<void (WebKit::FrameProcess*)>::operator()(WebKit::FrameProcess*) const 30 0x347713324 WTF::CompletionHandler<void (WebKit::FrameProcess*)>::operator()(WebKit::FrameProcess*) 31 0x3477130bc WebKit::BrowsingContextGroup::sharedProcessForSite(WebKit::WebsiteDataStore&, API::WebsitePolicies*, WebKit::WebPreferences const&, WebCore::Site const&, WebCore::Site const&, WebKit::WebProcessProxy::LockdownMode, WebKit::WebProcessProxy::EnhancedSecurity, API::PageConfiguration&, WebKit::IsMainFrame, WTF::CompletionHandler<void (WebKit::FrameProcess*)>&&)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-01 13:34:31 PST
<
rdar://problem/165642284
>
Jonathan Bedard
Comment 2
2025-12-03 08:00:18 PST
Landed resolution in
https://commits.webkit.org/303784@main
Jonathan Bedard
Comment 3
2025-12-03 08:00:59 PST
Although resolution doesn't appear to have actually fixed the problem.
Alex Christensen
Comment 4
2025-12-10 10:23:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55180
EWS
Comment 5
2025-12-10 23:30:32 PST
Committed
304279@main
(ecbc8950d1cf): <
https://commits.webkit.org/304279@main
> Reviewed commits have been landed. Closing PR #55180 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug