REGRESSION(303682@main): Broke TestWebKitAPI.SiteIsolation.* on Sonoma https://bugs.webkit.org/show_bug.cgi?id=303340

Reviewed by Geoffrey Garen.

Before 303682@main we were assuming that the BrowsingContextGroup held the only
strong reference to the RemotePageProxy, but with some safer-cpp improvements
that became no longer the case.  Sometimes we have a strong reference on the stack,
so we can't use the destructor as a reliable time to disconnect.  To fix this,
I manually disconnect in BrowsingContextGroup::removeFrameProcess.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm
* Source/WebKit/UIProcess/BrowsingContextGroup.cpp:
(WebKit::BrowsingContextGroup::removeFrameProcess):
* Source/WebKit/UIProcess/RemotePageProxy.cpp:
(WebKit::RemotePageProxy::disconnect):
(WebKit::RemotePageProxy::~RemotePageProxy):
* Source/WebKit/UIProcess/RemotePageProxy.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, IframeRedirectCrossSite)):
(TestWebKitAPI::TEST(SiteIsolation, NavigateIframeToProvisionalNavigationFailure)):

Canonical link: https://commits.webkit.org/304279@main